# ansible-workshop

./: .gitignore  01-inventories.md  README.md  ansible.cfg  app-role.yaml  app.yaml  nginx-basic.yaml  nginx-notify.yaml  nginx-role.yaml  regenerate-ssh-host-keys.service  webapp-user.yaml
action_plugins/: logind2.py
app/: .pdm.toml  Dockerfile  app.py  pyproject.toml
files/: default-site.conf.j2  nginx.conf.j2  webapp-site.conf.j2
group_vars/all/: vars.yaml
inventories/: all.yaml
lib/ansible/modules/: logind.py
roles/app/tasks/: main.yaml
roles/nginx/handlers/: main.yaml
roles/nginx/tasks/: main.yaml
roles/podman/tasks/: main.yaml
roles/webapp-user/tasks/: main.yaml
roles/webapp/files/: webapp-override.conf
roles/webapp/meta/: main.yaml
roles/webapp/tasks/: main.yaml
roles/webapp/templates/: container-webapp-proxy.service.j2  container-webapp-proxy.socket.j2
scripts/: create-vm.sh  env.sh  prepare-fedora-image.sh  prepare-ubuntu-image.sh  setup-appliance.sh
scripts/ubuntu/: resize-rootfs.service
